--- a/configs/OLE_multiple.yaml
+++ b/configs/OLE_multiple.yaml
@@ -32,7 +32,7 @@ pages:
           imgSelected: configs/resources/images/star_on.png
           imgHigherResponseSelected: configs/resources/images/star_on.png
         - value: neutral
-          label: neutral
+          label: Neutral
           img: configs/resources/images/star_off.png
           imgSelected: configs/resources/images/star_on.png
           imgHigherResponseSelected: configs/resources/images/star_on.png
